--- a/typographic-website/main.css
+++ b/typographic-website/main.css
@@ -41,7 +41,7 @@ h1{
 
 h2 {
     font-size: 110px;
-    font-family: "Alain";
+    font-family: "Alain-Regular";
     font-weight: 400;
     line-height: 0.6;
     text-align: center;
@@ -59,7 +59,7 @@ p{
     font-family: "ABCMonument";
     color:black;
     font-size:14px;
-    line-height: 1.4;
+    line-height: 1.6;
 }
 
 
