--- a/typographic-website/main.css
+++ b/typographic-website/main.css
@@ -47,6 +47,22 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    font-size: 144px;
+    font-family: "Alain-Regular";
+    font-weight: 400;
+    line-height: 0.6;
+    text-align: left;
+}
+
+h4 {
+    font-size: 24px;
+    font-family: "ABCMonument";
+    font-weight: 400;
+    line-height: 2.5;
+    text-align: left;
+}
+
 
 .hero-section{
     height:100vh;
@@ -66,8 +82,9 @@ p{
 
 .horizontal-scroll-wrapper{
     height: 55vh;
-    width: auto;
-    min-width:100vw;
+    width: 100vw;
+    max-width:100vw;
+    overflow:hidden;
 }
 
 img.horizontal-scroll-img {
@@ -110,4 +127,53 @@ img.horizontal-scroll-img {
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid black;
     padding: 10px 45px;
+}
+
+.img-box-section{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    max-width: 100%;
+    align-items: center;
+}
+
+.two-colum-wrapper{
+    width:100vw;
+    max-width: 100%;
+    height: 90vh;
+    display: grid;
+    align-items: initial;
+    grid-gap: 0px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.two-colum--box {
+    padding:40px;
+}
+
+.two-colum-box-text {
+    border: 1px solid black;
+    padding: 120px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+    justify-content: space-between;
+}
+
+.bag-ivory{
+    background-image: url("assets/Bag_Ivory.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bag-red{
+    background-image: url("assets/Bag_Red.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bag-pink{
+    background-image: url("assets/Bag_Pink.png");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
