--- a/typographic-website/main.css
+++ b/typographic-website/main.css
@@ -7,7 +7,7 @@ html {
 
 body {
     background: #fff;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1;
     margin: 0px;
     padding: 0px;
@@ -166,6 +166,7 @@ img.horizontal-scroll-img {
     row-gap: 40px;
     display: flex;
     flex-direction: column;
+    padding-top: 200px;
 }
 
 .img-box-section{
